# rustracing_jaeger

./: Cargo.toml
examples/: report.rs
src/: lib.rs  reporter.rs  span.rs  tracer.rs
src/thrift/: agent.rs  jaeger.rs
