[package]
name = "rustracing_jaeger"
version = "0.7.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Jaeger client library created on top of rustracing"
homepage = "https://github.com/sile/rustracing_jaeger"
repository = "https://github.com/sile/rustracing_jaeger"
readme = "README.md"
keywords = ["opentracing", "jaeger"]
license = "MIT"
edition = "2018"

[badges]
coveralls = {repository = "sile/rustracing"}

[dependencies]
beef = "0.5"
crossbeam-channel = "0.5"
hostname = "0.3"
minstant = "0.1"
percent-encoding = "2.1"
rand = "0.8.3"
rustracing = { git = "https://github.com/KaoImin/rustracing.git", branch = "main" }
thrift_codec = "0.1"
trackable = "1.2"

[dev-dependencies]
bytecodec = "0.4"
fibers_global = "0.1"
fibers_http_server = "0.2"
futures = "0.3"
httpcodec = "0.2"
tokio = { version = "1.17", features = ["sync"] }

[features]
default = []
sync = []
